<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.vaadin</groupId>
	<artifactId>bookstore-starter-flow</artifactId>
	<packaging>pom</packaging>
	<version>1.1-SNAPSHOT</version>
	<name>bookstore-starter-flow-parent</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8
        </project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<vaadin.version>25.2.0</vaadin.version>
		<wildfly.version>40.0.0.Final</wildfly.version>
		<wildfly.plugin.version>5.0.1.Final</wildfly.plugin.version>
		<version.weld-junit>4.0.3.Final</version.weld-junit>
	</properties>
	<prerequisites>
		<maven>3</maven>
	</prerequisites>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>3.0.2</version>
			</dependency>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-api</artifactId>
				<version>11.0.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
		<!-- Main Maven repository -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<!-- Repository used by many Vaadin add-ons -->
		<repository>
			<id>vaadin-addons</id>
			<url>https://maven.vaadin.com/vaadin-addons</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>Vaadin prereleases</id>
			<url>https://maven.vaadin.com/vaadin-prereleases</url>
		</repository>
		<!-- Repository needed for the snapshot versions of Vaadin -->
	</repositories>
	<pluginRepositories>
		<!-- Main Maven repository -->
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>Vaadin prereleases</id>
			<url>https://maven.vaadin.com/vaadin-prereleases</url>
		</pluginRepository>
	</pluginRepositories>
	<modules>
		<module>bookstore-starter-flow-backend</module>
		<module>bookstore-starter-flow-ui</module>
		<module>bookstore-starter-flow-it</module>
		<module>bookstore-starter-flow-my-component</module>
	</modules>
</project>
